--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "bootstrap": "5.0.2",
+    "dotenv": "^10.0.0",
     "node-sass": "4.14.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.4",
     "react-dom": "^17.0.2",
-    "react-dotenv": "^0.1.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
