--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "dotenv": "^10.0.0",
     "node-sass": "4.14.1",
     "react": "^17.0.2",
+    "react-alert": "^7.0.3",
+    "react-alert-template-basic": "^1.0.2",
     "react-bootstrap": "^2.0.0-beta.4",
     "react-dom": "^17.0.2",
     "react-infinite-scroller": "^1.2.4",
