--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "build": "react-scripts build",
     "winBuild": "set \"GENERATE_SOURCEMAP=false\" && react-scripts build -prod -minifyjs -minifycss -optimizejs",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "serve":"serve -s build"
   },
   "eslintConfig": {
     "extends": [
