--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.21.1",
     "bootstrap": "5.0.2",
     "dotenv": "^10.0.0",
+    "js-sha512": "^0.8.0",
     "node-sass": "4.14.1",
     "react": "^17.0.2",
     "react-alert": "^7.0.3",
@@ -34,7 +35,7 @@
     "winBuild": "set \"GENERATE_SOURCEMAP=false\" && react-scripts build -prod -minifyjs -minifycss -optimizejs",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "serve":"serve -s build"
+    "serve": "serve -s build"
   },
   "eslintConfig": {
     "extends": [
