--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "winBuild": "set \"GENERATE_SOURCEMAP=false\" && react-scripts build -prod -minifyjs -minifycss -optimizejs",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "serve": "serve -s build"
+    "serve": "serve -s build",
+    "postbuild": "react-snap -port=3000"
   },
   "eslintConfig": {
     "extends": [
@@ -54,5 +55,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-snap": "^1.23.0"
   }
 }
