--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "fortuneshelf",
   "version": "0.1.0",
   "private": true,
+  "engines" : { 
+    "npm" : ">=6.x.x",
+    "node" : ">=14.x.x"
+  },
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
