--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "engines" : { 
     "npm" : ">=6.x.x",
-    "node" : ">=14.x.x"
+    "node" : "==14.17.x"
   },
   "dependencies": {
     "@material-ui/core": "^4.12.3",
